# lane-detection-unet-ncnn

./: .gitignore  CITATION.cff  README.md  inference.py  requirements.txt  train.py
config/: eval_config.yaml  export_config.yaml  inference_config.yaml  test_config.yaml  train_config.yaml
datasets/: bdd100k.py
export/: export_to_pnnx.py
gradio_app/: app.py
models/: unet.py  unet_depthwise.py  unet_depthwise_nano.py  unet_depthwise_small.py
ncnn_deploy/: CMakeLists.txt  main.cpp
scripts/: eval.py  inference.py  test.py  train.py
utils/: checkpoint.py  metrics.py
